--- a/app/src/main/res/layout/fragment_services.xml
+++ b/app/src/main/res/layout/fragment_services.xml
@@ -26,7 +26,7 @@
         style="@style/Widget.App.Button.OutlinedButton.IconOnly"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="320dp"
+        android:layout_marginStart="320dp"
         android:background="@color/transparent"
 
         app:icon="@drawable/logout"
