--- a/app/src/main/res/layout/fragment_services.xml
+++ b/app/src/main/res/layout/fragment_services.xml
@@ -69,8 +69,8 @@
         app:layout_constraintTop_toTopOf="parent"
         android:fontFamily="@font/manrope_medium"
         android:padding="15dp"
-        android:hint="Select Category"
-        android:spinnerMode="dropdown" />
+        android:hint="Select Category" />
+
 
 
 
