--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,7 @@
         android:layout_marginEnd="170dp"
         android:gravity="center"
 
-        android:text="@string/Login"
+        android:text="@string/login"
 
         android:textColor="@color/MainColor"
         android:textSize="30sp"
