--- a/app/src/main/res/layout/fragment_services.xml
+++ b/app/src/main/res/layout/fragment_services.xml
@@ -1,61 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:fillViewport="true">
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ServicesFragment"
     android:background="@color/background">
-
-
-    <ImageView
-        android:id="@+id/logoimage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="180dp"
-        app:layout_constraintBottom_toTopOf="@id/category_spinner"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.606"
-        app:layout_constraintStart_toStartOf="parent"
-
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.364"
-        app:srcCompat="@drawable/logo" />
-
-    <Button
-        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="320dp"
-        android:background="@color/transparent"
-
-        app:icon="@drawable/logout"
-        app:iconTint="@color/letter"
-
-        app:layout_constraintVertical_bias="0.364"
-        app:layout_constraintBottom_toTopOf="@id/category_spinner"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-
-        />
-
-    <Button
-
-        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginRight="320dp"
-        android:background="@color/transparent"
-
-        app:icon="@drawable/back"
-        app:iconTint="@color/letter"
-
-        app:layout_constraintVertical_bias="0.364"
-        app:layout_constraintBottom_toTopOf="@id/category_spinner"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
         android:id="@+id/category_spinner"
@@ -192,4 +148,7 @@
         app:strokeWidth="3dp" />
 
 
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
