--- a/app/src/main/res/layout/fragment_services.xml
+++ b/app/src/main/res/layout/fragment_services.xml
@@ -88,16 +88,16 @@
         android:layout_width="370dp"
         android:layout_height="55dp"
         android:layout_marginTop="15dp"
+        android:background="@drawable/custom_input"
+        android:drawableEnd="@drawable/baseline_euro_symbol_24"
         android:ems="10"
+        android:fontFamily="@font/manrope_medium"
         android:hint="@string/cost"
+        android:padding="15dp"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/service_description"
-        android:fontFamily="@font/manrope_medium"
-        android:background="@drawable/custom_input"
-        android:padding="15dp"
-        />
+        app:layout_constraintTop_toBottomOf="@id/service_description" />
 
 
     <Button
